--- a/Plan.org
+++ b/Plan.org
@@ -15,7 +15,22 @@
   1. [X] Remaining overworld objects
   2. [X] Dialogue system
   3. [X] Goal for the level (a square you have to get to)
-  4. [ ] Level design
+  4. [X] Level design
+     - Done up to lvl 23
+* PLAN - SUNDAY MONRING
+  1. [ ] Level design
+  2. [ ] Epilogue
+     - Maybe an intro? Might not need one
+  3. [ ] Menu
+  4. [ ] Splash screen
+  5. [ ] Credits page
+  6. [ ] Save/load mechanics
+  7. [ ] BGM
+  8. [ ] SFX
+  9. [ ] Spice up the level background
+  10. [ ] Voice acting
+  11. [ ] Final room order check
+  12. [ ] Readme / thumbnail / afterword
 * OBJECTS
   + [X] Energy Drink
     - Pick up by walking over, and you can drink or mix it later.
