--- a/Plan.org
+++ b/Plan.org
@@ -24,7 +24,7 @@
   3. [X] Menu
   4. [X] Splash screen
   5. [X] Credits page
-  6. [ ] Save/loagad mechanics
+  6. [X] Save/load mechanics
   7. [ ] BGM
   8. [ ] SFX
   9. [ ] Spice up the level background
